--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
@@ -61,4 +61,120 @@
         </div>
 
     </body> 
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital@1&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-image: url('bg.png');
+            margin: 0; /* Remove default margin */
+            font-family: 'Asap Condensed', sans-serif;
+        }
+
+        .container {
+            max-width: 1200px; /* Adjust to your preference */
+            margin: 0 auto;
+            padding: 20px; /* Adjust as needed */
+        }
+
+        .invitation-box {
+            background-color: rgba(250, 235, 215, 0.75);
+            border-radius: 25px;
+            text-align: center;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .content {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px; /* Adjust as needed */
+        }
+
+        .content div {
+            background-color: rgba(250, 235, 215, 0.75);
+            border-radius: 25px;
+            width: 400px;
+            margin: 10px;
+            padding: 20px;
+            text-align: center;
+        }
+
+        img {
+            width: 90%;
+            height: auto;
+            max-width: 300px; /* Adjust as needed */
+            padding: 20px;
+        }
+
+        h3 {
+            font-size: 25px;
+            padding: 10px;
+        }
+
+        button {
+            font-family: 'Caveat Brush', cursive;
+            font-size: 30px;
+            margin: 20px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <div class="invitation-box">
+        <h1 style="font-family: 'Caveat Brush', cursive; font-size: 60px; text-align: center;">Invitation for CodeX Farewell</h1>
+    </div>
+
+    <div class="content">
+        <div>
+            <h3><br>CodeX is throwing a Farewell and we wouldn't dream of doing it without you.
+                <br> <br> <br> As we bid farewell to a memorable chapter, we would be honored to extend this invitation to you for the CodeX Farewell.
+                <br> <br> <br> Join us in celebrating our achievements and memories of the past year.<br></h3>
+        </div>
+
+        <div>
+            <img src="2.jpg">
+        </div>
+
+        <div>
+            <h3><br>While we bid farewell to our seniors, we would also like to welcome you,
+                <br>our next generation of coding enthusiasts.
+                <br><br>As you step into the next chapter of your lives, we encourage you to stay connected with CodeX.
+                <br><br>We look forward to sharing this special afternoon with you. <br><br>
+            </h3>
+        </div>
+    </div>
+
+    <div class="content">
+        <div>
+            <h3>Date -
+                <br>3rd January, 2024</h3>
+        </div>
+
+        <div>
+            <h3>Time -
+                <br>2:45p.m. - 3:45p.m.</h3>
+        </div>
+
+        <div>
+            <h3>Venue -
+                <br>Near the Big Tree, in the School Garden</h3>
+        </div>
+    </div>
+
+    <div>
+        <button onclick="window.location.href='yesno.html'">Next</button>
+    </div>
+</div>
+
+</body>
 </html>
