--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed:ital@1&display=swap" rel="stylesheet">
     <style>
         body {
-            background-image: url('bg.png');
+            background-image: url('bg.png');            
             margin: 0; /* Remove default margin */
             font-family: 'Asap Condensed', sans-serif;
+            background-color: rgba(255, 255, 255, 0.204);
+            background-blend-mode: lighten;
         }
 
         .container {
